@@ -103,7 +103,11 @@
           using:
           <ul>
             <li><code>yum install perl svn screen pysvn automake doxygen bzip2 tar gzip openssh graphviz zip</code></li>
-             <li><code>yum update</code></li>
+            <li><code>yum update</code></li>
+          </ul>
+          If you want to perform a full build with qt support, than run:
+          <ul>
+            <li><code>yum install perl svn screen pysvn automake doxygen bzip2 tar gzip openssh graphviz zip gcc-c++ boost-devel valgrind openssl-devel gcc qt4 fltk-devel bzip2-devel rsync openssl lzo-devel zziplib-devel acpid acpi nfs-utils java xerces-c xerces-c-devel mc qt qt-devel</code></li>
           </ul>
         </li>
         <li>
